--- a/Atividade06/src/app/home/home.page.html
+++ b/Atividade06/src/app/home/home.page.html
@@ -1,14 +1,11 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-menu-toggle>
+  <ion-button>
+      Toggle Menu
+  </ion-button>
+</ion-menu-toggle>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-button (click)="openMenu()">
+      Abrir Menu
+  </ion-button>
 </ion-content>
