--- a/Atividade06/src/app/home/home.page.html
+++ b/Atividade06/src/app/home/home.page.html
@@ -1,11 +1,17 @@
-<ion-menu-toggle>
-  <ion-button>
-      Toggle Menu
-  </ion-button>
-</ion-menu-toggle>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      Home
+    </ion-title>
+  </ion-toolbar>
+  <ion-buttons slot="start">
+    <ion-menu-button menu="menuId"></ion-menu-button>
+  </ion-buttons>
+</ion-header>
 
 <ion-content>
-  <ion-button (click)="openMenu()">
-      Abrir Menu
-  </ion-button>
+  <div class="ion-padding">
+    The world is your oyster.
+    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  </div>
 </ion-content>
