--- a/Atividade06/src/app/menu/menu.page.html
+++ b/Atividade06/src/app/menu/menu.page.html
@@ -1,29 +1,25 @@
-<ion-menu contentId="main-menu">
+<ion-menu menuId="main-menu" contentId="main-menu" side="start">
   <ion-header>
     <ion-toolbar color="primary">
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-router-outlet id="main-menu">
-
-  </ion-router-outlet>
   <ion-content>
-      <ion-menu-toggle>
-        <ion-item routerLink='/home'>Home</ion-item>
-        <ion-item routerLink='/opcoes'>Opções</ion-item>
-      </ion-menu-toggle>
+    <ion-menu-toggle>
+      <ion-item [routerLink]="['/home']">
+        <ion-icon slot="start" name="home"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-item>
+    </ion-menu-toggle>
+    <ion-menu-toggle>
+      <ion-item [routerLink]="['/opcoes']">
+        <ion-icon slot="start" name="settings"></ion-icon>
+        <ion-label>Opções</ion-label>
+      </ion-item>
+    </ion-menu-toggle>
   </ion-content>
-  <ion-menu-button slot>
-
-  </ion-menu-button>
 </ion-menu>
 
-
-<ion-header>
-    <ion-toolbar>
-        <ion-title>Home</ion-title>
-    </ion-toolbar>
-</ion-header>
-<ion-content>
-
-</ion-content>
+<ion-split-pane>
+  <ion-router-outlet id="main-menu"></ion-router-outlet>
+</ion-split-pane>
