--- a/Atividade06/src/app/opcoes/opcoes.page.html
+++ b/Atividade06/src/app/opcoes/opcoes.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>opcoes</ion-title>
+    <ion-title>Opções</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
