Criando o projeto Atividade05   (Correções)

--- a/Atividade05/src/app/home/home.page.html
+++ b/Atividade05/src/app/home/home.page.html
@@ -11,9 +11,7 @@
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
+  <ion-button color="danger"[routerLink]="['/']">Sair</ion-button>
+  <ion-button [routerLink]="['/detalhes/42']">Detalhes</ion-button>
+  <ion-button color="secondary" [routerLink]="['/abas']">Abas</ion-button>
 </ion-content>
-
-
-<ion-button routerLink='']">
-  Sair
-</ion-button>
