--- a/Atividade04/src/app/grid/grid.page.html
+++ b/Atividade04/src/app/grid/grid.page.html
@@ -1,41 +1,37 @@
-
-<ion-grid>
-  <ion-row>
-    <ion-col>
-        <ion-toolbar color="medium">
-          <ion-title>Title</ion-title>
-        </ion-toolbar>
-    </ion-col>
-  <ion-row>
+<ion-grid fixed>
     <ion-row>
-      <ion-col size="12">
-        <p>Página criada com Grid Layout/p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">1 de 2</ion-col>
-      <ion-col size="12">2 de 2</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">1 de 3</ion-col>
-      <ion-col size="12">2 de 3</ion-col>
-      <ion-col size="12">3 de 3</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">1 de 4</ion-col>
-      <ion-col size="12">2 de 4</ion-col>
-      <ion-col size="12">3 de 4</ion-col>
-      <ion-col size="12">4 de 4</ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="12">1 de 5</ion-col>
-      <ion-col size="12">2 de 5</ion-col>
-      <ion-col size="12">3 de 5</ion-col>
-      <ion-col size="12">4 de 5</ion-col>
-      <ion-col size="12">5 de 5</ion-col>
-    </ion-row>
-
-        </ion-toolbar>
-    </ion-col>
-  <ion-row>
-</ion-grid>
+        <ion-col>
+          <ion-toolbar color="medium">
+            <ion-title>Título</ion-title>
+          </ion-toolbar>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>
+            <p>Página criada com Grid Layout</p>
+          </ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>1 de 2</ion-col>
+          <ion-col>2 de 2</ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>1 de 3</ion-col>
+          <ion-col>2 de 3</ion-col>
+          <ion-col>3 de 3</ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>1 de 4</ion-col>
+          <ion-col>2 de 4</ion-col>
+          <ion-col>3 de 4</ion-col>
+          <ion-col>4 de 4</ion-col>
+      </ion-row>
+      <ion-row>
+          <ion-col>1 de 5</ion-col>
+          <ion-col>2 de 5</ion-col>
+          <ion-col>3 de 5</ion-col>
+          <ion-col>4 de 5</ion-col>
+          <ion-col>5 de 5</ion-col>
+      </ion-row>
+  </ion-grid>
+  
