--- a/Atividade04/src/app/list/list.page.html
+++ b/Atividade04/src/app/list/list.page.html
@@ -1,31 +1,25 @@
+<ion-content>
 <ion-list>
-    <ion-toolbar color="darck">
-        <ion-title>Title</ion-title>
-      </ion-toolbar>
-    
+  <ion-toolbar color="dark">
+    <ion-title>Título</ion-title>
+  </ion-toolbar>
   <ion-header>
-      <ion-toolbar>
-        <ion-title>Página criada com List Layout</ion-title>
-      </ion-toolbar>
-    </ion-header>
-
-    <ion-item>Item 01</ion-item>
-    <ion-item>Item 02</ion-item>
-    <ion-item>Item 03</ion-item>
-    <ion-item>Item 04</ion-item>
-    <ion-item>Item 05</ion-item>
-    <ion-item>Item 06</ion-item>
-    <ion-item>Item 07</ion-item>
-    <ion-item>Item 08</ion-item>
-    <ion-item>Item 09</ion-item>
-    <ion-item>Item 10</ion-item>
-    <ion-item>Item 11</ion-item>
-    <ion-item>Item 12</ion-item>
-    <ion-item>Item 13</ion-item>
-    <ion-item>Item 14</ion-item>
-    <ion-item>Item 15</ion-item>
-
+      <ion-label>Página criada com List Layout</ion-label>
+  </ion-header>
+  <ion-item>Item 1</ion-item>
+  <ion-item>Item 2</ion-item>
+  <ion-item>Item 3</ion-item>
+  <ion-item>Item 4</ion-item>
+  <ion-item>Item 5</ion-item>
+  <ion-item>Item 6</ion-item>
+  <ion-item>Item 7</ion-item>
+  <ion-item>Item 8</ion-item>
+  <ion-item>Item 9</ion-item>
+  <ion-item>Item 10</ion-item>
+  <ion-item>Item 11</ion-item>
+  <ion-item>Item 12</ion-item>
+  <ion-item>Item 13</ion-item>
+  <ion-item>Item 14</ion-item>
+  <ion-item>Item 15</ion-item>
   </ion-list>
-
- 
-
+</ion-content>
