--- a/Atividade04/src/app/menu/menu.page.html
+++ b/Atividade04/src/app/menu/menu.page.html
@@ -1,33 +1,34 @@
 
-<ion-header>
-  <ion-toolbar color="success">
-    <ion-title>manu</ion-title>
-    <ion-menu-button slot="start">
-    </ion-menu-button>
-  </ion-toolbar>
-</ion-header>
+    <ion-menu>
+        <ion-header>
+            <ion-toolbar>
+                <ion-toolbar color="success">
+                  </ion-toolbar>
+                  <ion-title>Menu</ion-title>
+            </ion-toolbar>
+          </ion-header>
+      </ion-menu>
+      <ion-router-outlet main></ion-router-outlet>
+      <ion-content>
+          <ion-item>
+              <ion-icon name="logo-chrome"></ion-icon>
+              <ion-label>Item 1</ion-label>
+          </ion-item>
+          <ion-item>
+              <ion-icon name="logo-playstation"></ion-icon>
+              <ion-label>Item 2</ion-label>
+          </ion-item>
+          <ion-item>
+              <ion-icon name="logo-youtube"></ion-icon>
+              <ion-label>Item 3</ion-label>
+          </ion-item>
+      </ion-content>
+      <ion-header>
+          <ion-toolbar color="warning">
+                <ion-menu-button slot="start"></ion-menu-button>
+          </ion-toolbar>
+      </ion-header>
+      <ion-content>
+          <p>Página criada com Menu Layout</p>
+      </ion-content>
 
-<ion-router-outlet main></ion-router-outlet>
-<ion-menu>
-  <ion-content>
-      <ion-item>
-        <ion-icon name="home"></ion-icon>
-        <ion-label>Item 1</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="home"></ion-icon>
-        <ion-label>Item 2</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="home"></ion-icon>
-        <ion-label>Item 3</ion-label>
-      </ion-item>
-    </ion-content>
-</ion-menu>
-
-<ion-content>
-  <p>Página criada com Menu Layout</p>
-</ion-content>
-
-
-  
