--- a/Atividade04/src/app/split/split.page.html
+++ b/Atividade04/src/app/split/split.page.html
@@ -1,29 +1,28 @@
-<ion-header>
-  <ion-toolbar color="light">
-    <ion-title>Painel Principal</ion-title>
-    <p>ágina criada com Split Pane Layout</p>
-  </ion-toolbar>
-</ion-header>
-<ion-router-outlet main></ion-router-outlet>
 <ion-split-pane>
   <ion-menu>
     <ion-header>
       <ion-toolbar color="danger">
-        <ion-title>Painel Lateral</ion-title>
       </ion-toolbar>
+      <ion-title>Painel Lateral</ion-title>
     </ion-header>
     <ion-content>
-        <ion-item>1</ion-item>
-        <ion-item>2</ion-item>
-        <ion-item>3</ion-item>
+      <ion-item>
+          <ion-label>Aba 1</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-label>Aba 2</ion-label>
+      </ion-item>
+      <ion-item>
+          <ion-label>Aba 3</ion-label>
+      </ion-item>
     </ion-content>
   </ion-menu>
-</ion-split-pane>
-
-<ion-content>
-</ion-content>
-
-<<<<<<< HEAD
-=======
-
->>>>>>> f8b8f3f0f8a0042c1039c9d640c07595fb0b95d1
+  <ion-content main> 
+    <ion-header>
+      <ion-toolbar color="light">
+        <ion-title>Painel Principal</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <p>Página criada com Split Pane Layout</p>
+  </ion-content>
+  </ion-split-pane>
