--- a/Atividade04/src/app/tabs/tabs.page.html
+++ b/Atividade04/src/app/tabs/tabs.page.html
@@ -1,25 +1,32 @@
-<ion-tabs>
-  <ion-tab-bar slot="top" color="tertiary">
-      <ion-tab-button>
-        <ion-label>Aba 1</ion-label>
-      </ion-tab-button>
-      <ion-tab-button>
-        <ion-label>Aba 2</ion-label>
-      </ion-tab-button>
-      <ion-tab-button>
-        <ion-label>Aba 3</ion-label>
-      </ion-tab-button>
-  </ion-tab-bar>
-      <ion-content>
-        <p>Página criada com Tabs Layout.</p>
-      </ion-content>
-    <ion-tab-bar slot="botom" color="tertiary">
-        <ion-tab-button>
-          <ion-icon name="home"></ion-icon>
-          <ion-label>Aba 4</ion-label>
-        </ion-tab-button>
-        <ion-tab-button>
-          <ion-label>Aba 5</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-</ion-tabs>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>tabs</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content>
+    <ion-tabs>
+        <ion-tab-bar slot="top" color="tertiary">
+            <ion-tab-button>
+                <ion-label>Aba 1</ion-label>
+              </ion-tab-button>
+              <ion-tab-button>
+                  <ion-label>Aba 2</ion-label>
+                </ion-tab-button>
+                <ion-tab-button>
+                    <ion-label>Aba 3</ion-label>
+                  </ion-tab-button>
+          </ion-tab-bar>
+          <p>Página criada com Tabs Layout</p>
+          <ion-tab-bar slot="botom" color="tertiary">
+              <ion-tab-button>
+                  <ion-icon name="home"></ion-icon>
+                  <ion-label>Aba 4</ion-label>
+                </ion-tab-button>
+                <ion-tab-button>
+                    <ion-icon name="logo-apple"></ion-icon>
+                    <ion-label>Aba 5</ion-label>
+                  </ion-tab-button>
+            </ion-tab-bar>
+      </ion-tabs>
+</ion-content>
